--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongodb": "^3.3.3",
+    "mongoose": "^5.7.7",
     "path": "^0.12.7"
   }
 }
